--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Django~=4.2.6
 psycopg2-binary==2.9.9
 djangorestframework~=3.14.0
 django-cors-headers==4.3.0
+
+requests~=2.31.0
+python-dotenv~=1.0.0
