--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,6 +25,7 @@ jobs:
           username: root
           key: ${{ secrets.KEY }}
           scripts: |
+            cd blog
             git pull
             systemctl restart gunicorn.service
 
