--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,8 @@
 name: Run tests
-on: push
+on:
+  push:
+    branches:
+      - master
 jobs:
   test:
     name: Install requirements and execute tests
