--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -29,7 +29,7 @@ jobs:
           key: ${{ secrets.KEY }}
           scripts: |
             cd blog
-            git pull
+            git pull origi master
             systemctl daemon-reload
             systemctl restart gunicorn.socket gunicorn.service
             systemctl restart nginx
