--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -2,7 +2,7 @@ name: Run tests
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   test:
     name: Install requirements and execute tests
@@ -29,7 +29,7 @@ jobs:
           key: ${{ secrets.KEY }}
           scripts: |
             cd blog
-            git pull origi master
+            git pull origi main
             systemctl daemon-reload
             systemctl restart gunicorn.socket gunicorn.service
             systemctl restart nginx
