--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: Run tests
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   test:
     name: Install requirements and execute tests
