--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -5,6 +5,15 @@ on:
       - main
 jobs:
   test:
+    services:
+      postgres:
+        image: postgres:14.9
+        env:
+          POSTGRES_DB: postgres
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+        ports:
+          - 5432:5432
     name: Install requirements and execute tests
     runs-on: ubuntu-latest
     steps:
