--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ psycopg2-binary==2.9.9
 djangorestframework~=3.14.0
 django-cors-headers==4.3.0
 Pillow==10.0.1
+django-ratelimit==4.1.0
 
 requests~=2.31.0
 python-dotenv~=1.0.0
